# ProjectCadence

./: .cadence.env  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  __files__.html  activate  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deployW04.yml  week5-ci.yml
assets/css/: site.css
assets/js/: site.js
blog/_partials/: pe-explainer.html  teaser.html
blog/posts/: progressive-enhancement.html
exp/: current
exp/EXP_20250827_lshv2/: METADATA.yaml  README.md  USAGE_INSTRUCTIONS.md  run_complete_pipeline.py  tmp.py
exp/EXP_20250827_lshv2/benchmarks/: long_arena_benchmark.py
exp/EXP_20250827_lshv2/data/: synthetic_data_generator.py
exp/EXP_20250827_lshv2/scripts/: train_lsh_v2.py
tooling/: cadence.py  new-week.sh
weeks/: current
weeks/W01_20250804_reverse-stdlib/: .gitignore  CMakeLists.txt  METADATA.yaml  NOTES.md  README.md
weeks/W01_20250804_reverse-stdlib/benchmarks/: bench_insert.cpp
weeks/W01_20250804_reverse-stdlib/src/: my_memcpy.cpp  my_memcpy.hpp  my_sort.cpp  my_sort.hpp  my_vector.hpp
weeks/W01_20250804_reverse-stdlib/tests/: memcpy_tests.cpp  sort_tests.cpp  vector_tests.cpp
weeks/W02_20250811_dsa-benchmarks/: CMakeLists.txt  METADATA.yaml  NOTES.md  README.md
weeks/W02_20250811_dsa-benchmarks/benchmarks/: cache_probe.cpp  datasets.hpp  main.cpp  workloads.hpp  workloads_stl.hpp
weeks/W02_20250811_dsa-benchmarks/data/results/: bench_uniform.csv  bench_uniform_analysis_speedup_table.csv  bench_uniform_analysis_summary_stats.csv  bench_zipf.csv  bench_zipf_analysis_speedup_table.csv  bench_zipf_analysis_summary_stats.csv  cache_probe.csv
weeks/W02_20250811_dsa-benchmarks/docs/: RESULTS.md
weeks/W02_20250811_dsa-benchmarks/scripts/: analyze.py  plot.py  run_bench.sh
weeks/W02_20250811_dsa-benchmarks/src/: arena.hpp  hash.hpp  heap.hpp  list.hpp  vector.hpp
weeks/W02_20250811_dsa-benchmarks/tests/: smoke.cpp
weeks/W03_20250818_gitflow-ci/: METADATA.yaml  README.md
weeks/W04_20250825_static-web-blog/: METADATA.yaml  README.md
weeks/W05_20250901_rest-api/: .eslintrc.json  METADATA.yaml  NOTES.md  README.md  eslint.config.js  package-lock.json  package.json
(+96 files in other folders)
